[gd_scene load_steps=6 format=3 uid="uid://df87khe4esq3k"]

[ext_resource type="FontFile" uid="uid://dactcqlk4amps" path="res://fonts/EquipmentPro/EquipmentPro.ttf" id="1_0mo5n"]
[ext_resource type="Script" uid="uid://cpbgmbowuuba6" path="res://scenes/demo/demo_settings/general_settings.gd" id="1_trsdm"]
[ext_resource type="FontFile" uid="uid://dpgkgt8fxxvvk" path="res://fonts/EquipmentPro/EquipmentPro.woff" id="2_ke072"]
[ext_resource type="Texture2D" uid="uid://cdd87fkh7i00c" path="res://assets/UI/name_selection/modal.png" id="2_trsdm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_espjv"]
texture = ExtResource("2_trsdm")

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trsdm")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.5
offset_top = -300.0
offset_right = 512.5
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_espjv")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_top = 83.0
offset_right = 98.0
offset_bottom = 147.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_0mo5n")
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 3

[node name="BoxContainer" type="BoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.5
offset_top = 177.0
offset_right = 92.5
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1
vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ke072")
theme_override_font_sizes/font_size = 32
text = "Video"
horizontal_alignment = 1

[node name="crt_checkbox" type="CheckButton" parent="Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0mo5n")
theme_override_font_sizes/font_size = 16
text = "CRT Effect"

[node name="fullscreen_checkbox" type="CheckButton" parent="Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0mo5n")
theme_override_font_sizes/font_size = 16
text = "Fullscreen"

[node name="close_button" type="Button" parent="Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Close"

[connection signal="toggled" from="Panel/BoxContainer/VBoxContainer/crt_checkbox" to="." method="_on_crt_checkbox_toggled"]
[connection signal="toggled" from="Panel/BoxContainer/VBoxContainer/fullscreen_checkbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="pressed" from="Panel/BoxContainer/VBoxContainer/close_button" to="." method="_on_close_button_pressed"]
